Update JavaDocs